RESOLVED FIXED 263911
[WebGPU] Compiler error opening https://kishimisu.github.io/WebGPU-Fluid-Simulation/
https://bugs.webkit.org/show_bug.cgi?id=263911
Summary [WebGPU] Compiler error opening https://kishimisu.github.io/WebGPU-Fluid-Simu...
Mike Wyrzykowski
Reported 2023-10-30 12:08:30 PDT
Open https://kishimisu.github.io/WebGPU-Fluid-Simulation/ Note the following error: 1 error generated while compiling the shader: 160:8: redeclaration of 'col'
Attachments
Radar WebKit Bug Importer
Comment 1 2023-10-30 12:08:45 PDT
Tadeu Zagallo
Comment 2 2023-10-31 10:05:48 PDT
EWS
Comment 3 2023-11-01 03:19:20 PDT
Committed 270047@main (376fed929bfa): <https://commits.webkit.org/270047@main> Reviewed commits have been landed. Closing PR #19778 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.