[WebGPU] Compiler error opening https://kishimisu.github.io/WebGPU-Fluid-Simulation/ https://bugs.webkit.org/show_bug.cgi?id=263911 rdar://117698934

Reviewed by Mike Wyrzykowski.

When visiting the body of the if statement we were calling the base class' visitor,
which resulted in a missing scope for that block.

* Source/WebGPU/WGSL/TypeCheck.cpp:
(WGSL::TypeChecker::visit):
* Source/WebGPU/WGSL/tests/valid/scope.wgsl:

Canonical link: https://commits.webkit.org/270047@main